src/sass/style.sass
$sans: "PT Sans", Helvetica, Arial, sans-serif
$serif: "PT Serif", Times, serif
$code: Iosevka, Courier, monospace
//$code: Iosevka

$layout: 12 .25 show


html, body
  height: 100%

html
  padding: 5px 5px 5px
  box-sizing: border-box
  font: 62.5% $sans

body
  background: #eee
  background: url('/assets/background.jpg') repeat
  //animation: 100s scroll infinite linear
  font-family: $sans
  font-size: 1.6em
  font-weight: 300
  letter-spacing: .01em
  line-height: 1.6
  @media (max-width: 900px)
    font-size: 9pt


*
  margin: 0
  padding: 0
  
  &, &:before, &:after
    box-sizing: inherit

.body-wrap
  padding-top: 0.7em
  //display: flex
  min-height: 100%
  background: none

.hidden
  display: none

.vishidden
  opacity: 0

.links > a
  padding-left: 3px
  padding-right: 3px
  &:first-child
    padding-left: 0
  &:last-child
    padding-right: 0

@import "typography"
@import "icons"
  
@import "sidebar"
@import "content"

